first batch of easy ref comments

--- a/mo.tex
+++ b/mo.tex
@@ -133,7 +133,7 @@ E \sm T(\xi) \arrow{dr}[description]{\eta_{MO} \sm 1 \sm 1} \arrow[densely dotte
 E \sm T(\xi) \arrow[densely dotted]{rrr}{\theta_E} & & & E \sm \Susp^\infty_+ X,
 \end{tikzcd}
 \end{center}
-whose columns are retractions.  The dotted arrows \(\theta_E\) are defined by following the solid path from corner to corner.  Similarly, the inverse \(\alpha_{MO}\) to \(\theta_{MO}\) induces a map \(\alpha_E\).  We claim that \(\theta_E\) and \(\alpha_E\) are themselves inverses, which is shown by straggering and rearranging where the collapse of the \(MO\) factor into \(E\) happens.  The composite \(\alpha_E \circ \theta_E\) is equivalent to the following:
+whose columns are retractions.  The dotted arrows \(\theta_E\) are defined by following the solid path from corner to corner.  Similarly, the inverse \(\alpha_{MO}\) to \(\theta_{MO}\) induces a map \(\alpha_E\).  We claim that \(\theta_E\) and \(\alpha_E\) are themselves inverses, which is shown by staggering and rearranging where the collapse of the \(MO\) factor into \(E\) happens.  The composite \(\alpha_E \circ \theta_E\) is equivalent to the following:
 \begin{align*}
 E \sm \Susp^\infty_+ & X \xrightarrow{1 \sm \eta \sm 1} E \sm MO \sm \Susp^\infty_+ X \\
 & \xrightarrow{1 \sm 1 \sm \eta \sm 1} E \sm MO \sm MO \sm \Susp^\infty_+ X \\
@@ -187,7 +187,7 @@ This powers an induction that shows that \(\HFtwo_* \RP^\infty\) has a single cl
 
 An abbreviated summary of this book is that we are going to put ``\(\Spec\)'' in front of rings appearing in algebraic topology and see what happens.  Before actually doing any algebraic topology, we should recall what this means on the level of algebra.  The core idea is to replace an \(\F_2\)--algebra \(A\) by the functor it corepresents, which we will denote by \(\Spec A\).  For any other ``test \(\F_2\)--algebra'' \(T\), we set \[(\Spec A)(T) := \CatOf{Algebras}_{\F_2/}(A, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec A).\]  More generally, we have the following definition:
 \begin{definition}\label{DefnAffineF2Scheme}
-An \index{scheme!affine}\textit{affine \(\F_2\)--scheme} is a functor \(X\co \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}\) which is (noncanonically) isomorphic to \(\Spec R\) for some \(\F_2\)--algebra \(A\).  Given such an isomorphism, we will refer to \(\Spec A \to X\) as a \idxentry{parameter} for \(X\) and its inverse \(X \to \Spec A\) as a \idxentry{coordinate} for \(X\).
+An \index{scheme!affine}\textit{affine \(\F_2\)--scheme} is a functor \(X\co \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}\) which is (noncanonically) isomorphic to \(\Spec A\) for some \(\F_2\)--algebra \(A\).  Given such an isomorphism, we will refer to \(\Spec A \to X\) as a \idxentry{parameter} for \(X\) and its inverse \(X \to \Spec A\) as a \idxentry{coordinate} for \(X\).
 \end{definition}
 
 \begin{lemma}
@@ -217,7 +217,7 @@ This is a matter of recognizing the product in \(\CatOf{Algebras}_{\F_2/}^{\math
 \end{proof}
 
 \begin{example}\label{InformalAdditiveGroupExample}
-The functor \(\mathbb A^1\) introduced above is naturally valued in groups: since \(\mathbb A^1(T) \cong T\), we can use the addition on \(T\) to make it into an abelian group.  When considering \(\mathbb A^1\) with this group scheme structure, we notate it as \index{group scheme!additive group@additive group, \(\mathbb G_a\)}\(\mathbb G_a\).  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:
+The functor \(\mathbb A^1\) introduced above is naturally valued in groups: since \(\mathbb A^1(T) \cong T\), we can use the addition on \(T\) to make it into an abelian group.  When considering \(\mathbb A^1\) with this group scheme structure, we notate it as \index{group scheme!additive group@additive group, \(\mathbb G_a\)}\(\mathbb G_a\).  Applying the Yoneda lemma, one deduces the following formulas for the Hopf algebra structure maps:\footnote{Of course, since we are working over \(\F_2\), we could just as well write \(\chi(x) = x\).}
 \begin{align*}
 \mathbb G_a \times \mathbb G_a & \xrightarrow{\mu} \mathbb G_a & x_1 + x_2 & \mapsfrom x, \\
 \mathbb G_a & \xrightarrow{\chi} \mathbb G_a & -x & \mapsfrom x, \\
@@ -529,7 +529,7 @@ The \textit{Adams spectral sequence} is convergent and has signature
 \popQED
 \]
 \end{theorem}
-In effect, this asserts that the above process is \emph{exhaustive}: every element of \((\pi_* \S^0)^\wedge_2\) can be detected and distinguished by some representative class of extensions of comodules for the dual Steenrod algebra.  Mildly more generally, if \(X\) is a bounded-below spectrum, then there is even an Adams spectral sequence of signature \[\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X) \Rightarrow \pi_* X^\wedge_2.\]
+In effect, this asserts that the above process is \emph{exhaustive}: every element of \((\pi_* \S^0)^\wedge_2\) can be detected and distinguished by some representative class of extensions of comodules for the dual Steenrod algebra.  Mildly more generally, if \(X\) is a bounded-below spectrum of finite type, then there is even an Adams spectral sequence of signature \[\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X) \Rightarrow \pi_* X^\wedge_2.\]
 
 We could now work through the construction of the Adams spectral sequence, but it will fit more nicely into a story later on in \Cref{StableContextLecture}.  Before moving on to other pursuits, however, we will record the following utility Lemma.  It is believable based on the above discussion, and we will need to use it before we get around to examining the guts of the construction.
 \begin{lemma}[{cf.\ \Cref{HurewiczRemark}}]\label{HurewiczImageOnZeroLine}
@@ -613,7 +613,7 @@ Given a map \(f \co A \to B\) of Hopf \(k\)--algebras, the induced adjunction \(
 \end{center}
 \end{lemma}
 
-\begin{remark}
+\begin{remark}\label{TrustMeAboutQCoh}
 In \Cref{StableContextLecture} (and \Cref{FHGivesComodules} specifically), we will explain the notation ``\(\Spec k \mmod \Spec A\)'' used above.  For now, suffice it to say that there again exists a functor-of-points notion of ``quasicoherent sheaf'' associated to a Hopf \(k\)--algebra \(A\), and such sheaves are equivalent to \(A\)--comodules.
 \end{remark}
 
@@ -714,7 +714,7 @@ At the other extreme, we can pick the extremely nondegenerate case \(X = \S\), w
 
 \section{The unoriented bordism ring}\label{PiStarMOSection}
 
-Our goal in this section is to use our results so far to make a calculation of \(\pi_* MO\), the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] which requires understanding \(\HFtwo P_0(MO)\) as a comodule for the dual Steenrod algebra.
+Our goal in this section is to use our results so far to make a calculation of \(\pi_* MO\), the unoriented bordism ring.  Our approach is the same as in the examples at the end of the previous section: we will want to use the Adams spectral sequence of signature \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)\widetilde{\:}) \Rightarrow \pi_* MO,\] where \(\HFtwo P_0(MO)\widetilde{\:}\) denotes the associated quasicoherent sheaf over \(\Spec k \mmod \Spec A_*\) as in \Cref{TrustMeAboutQCoh}---and we will therefore want to understand \(\HFtwo P_0(MO)\) as a comodule for the dual Steenrod algebra.
 
 Our first step toward this is the following calculation:
 \begin{lemma}[{\cite[Theorem 16.17]{Switzer}}]\label{HF2BOIsSymAlg}
@@ -800,7 +800,7 @@ Recall, again, that \(\InternalAut_1(\G_a)\) is defined by the (split) kernel se
 f_{\mathrm{typ}}(x) & = \sum_{k=0}^\infty b_{2^k-1} x^{2^k}, &
 f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 \end{align*}
-Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power--of--\(2\) degrees, it follows that \(f_{\mathrm{typ}}\) gives a point \(f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)\).  We can use it to de-scale and get a new coordinate \(g(x) = f_{\mathrm{typ}}^{-1}(f(x))\), which has an analogous decomposition into series \(g_{\mathrm{typ}}(x)\) and \(g_{\mathrm{rest}}(x)\).  Finally, note that \(g_{\mathrm{typ}}(x) = x\) and that \(f_{\mathrm{typ}}\) is the unique point in \(\InternalAut_1(\G_a)(R)\) that has this property.  Altogether, this shows that the map \(f \mapsto (f_{\mathrm{typ}}, g_{\mathrm{rest}})\) is an isomorphism.
+Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power--of--\(2\) degrees, it follows that \(f_{\mathrm{typ}}\) gives a point \(f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)\).  We can use it to de-scale and get a new coordinate \[g(x) = f_{\mathrm{typ}}^{-1}(f(x)) = f_{\mathrm{typ}}^{-1}(f_{\mathrm{typ}}(x)) + f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x)),\] which itself has an analogous decomposition into series \(g_{\mathrm{typ}}(x)\) and \(g_{\mathrm{rest}}(x)\).  Finally, note that \(g_{\mathrm{typ}}(x) = x\), since \(f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x))\) cannot contribute to the power--of--\(2\) degrees in the composite, and that \(f_{\mathrm{typ}}\) is the unique point in \(\InternalAut_1(\G_a)(R)\) that has this property.  Altogether, this shows that the map \(f \mapsto (f_{\mathrm{typ}}, g_{\mathrm{rest}})\) is an isomorphism.
 \end{proof}
 
 \begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
@@ -826,7 +826,7 @@ Referring to \Cref{HurewiczImageOnZeroLine}, we find that the Hurewicz map induc
 \end{proof}
 
 \begin{remark}
-Just using that \(\pi_* MO\) is connective and \(\pi_0 MO = \F_2\), we can produce a ring spectrum map \(MO \to \HFtwo\).  What we have learned is that this map has a splitting: \(MO\) is also an \(\HFtwo\)--algebra.
+Just using that \(\pi_* MO\) is connective and \(\pi_0 MO = \F_2\), we can produce a ring spectrum map \(MO \to \HFtwo\).  What we have learned is that this map has a splitting: \Cref{MOSplitsIntoHF2s} can be used to factor the unit map of \(MO\) through \(\HFtwo\) in a way that makes it an \(\HFtwo\)--algebra.
 \end{remark}
 
 \begin{remark}
