--- a/quillen.tex
+++ b/quillen.tex
@@ -25,7 +25,7 @@ In particular, for a complex-oriented ring spectrum \(E\) it follows that \(E^* 
 
 We would like to then review the results of \Cref{TheSteenrodAlgebraSection} and conclude (by reinterpreting \Cref{CPinftyNiceCalculation}) that \(\CP^\infty_E\) gives a \(1\)--dimensional formal group over \(\Spec E_*\).  In order to make this statement honestly, however, we are first required to describe more responsibly the algebraic geometry we outlined in \Cref{SectionSchemesOverF2}.  Specifically, the characteristic \(2\) nature of the unoriented bordism ring was a major simplifying feature which made it wholly amenable to study by \(\HFtwo\).  In turn, \(\HFtwo\) has many nice properties---for example, it has a duality between homology and cohomology, and it supports a K\"unneth isomorphism---and these are reflected in the extremely simple algebraic geometry of \(\Spec \F_2\).  By contrast, the complex bordism ring is considerably more complicated, not least because it is a characteristic \(0\) ring, and more generally we have essentially no control over the behavior of the coefficient ring \(E_*\) of some other complex--oriented theory.  Nonetheless, once the background theory and construction of ``\(X_E\)'' are taken care of in \Cref{FormalVarietiesLecture}, we indeed find that \(\CP^\infty_E\) is a \(1\)--dimensional formal group over \(\Spec E_*\).
 
-However, where we could explicitly calculate \(\RP^\infty_{\HFtwo}\) to be \(\G_a\), we again have little control over what formal group \(\CP^\infty_E\) could possibly be.  In the universal case, \(\CP^\infty_{MU}\) comes equipped with a natural coordinate, and this induces a map \[\Spec MU_* \to \moduli{fgl}\] from the spectrum associated to the coefficient ring of complex bordism to the moduli of formal group laws.  The conclusion of this Case Study in \Cref{QuillensTheorem} (modulo an algebraic result, shown in the next Case Study as \Cref{LazardsTheorem}) states that this map is an isomorphism, so that \(\CP^\infty_{MU}\) is the universal---i.e., maximally complicated---formal group.  Our route for proving this passes through the foothills of the theory of ``\(p\){\th} power operations'', which simultaneously encode many possible natural transformations from \(MU\)--cohomology to itself glommed together in a large sum, one term of which is the literal \(p\){\th} power.  Remarkably, the identity operation also appears in this family of operations, and the rest of the operations are in some sense controlled by this naturally occuring formal group law.  A careful analysis of this sum begets the inductive proof in \Cref{QuillenSurjective} that \(\sheaf O_{\moduli{fgl}} \to MU_*\) is surjective.
+However, where we could explicitly calculate \(\RP^\infty_{\HFtwo}\) to be \(\G_a\), we again have little control over what formal group \(\CP^\infty_E\) could possibly be.  In the universal case, \(\CP^\infty_{MU}\) comes equipped with a natural coordinate, and this induces a map \[\Spec MU_* \to \moduli{fgl}\] from the spectrum associated to the coefficient ring of complex bordism to the moduli of formal group laws.  The conclusion of this Case Study in \Cref{QuillensTheorem} (modulo an algebraic result, shown in the next Case Study as \Cref{LazardsTheorem}) states that this map is an isomorphism, so that \(\CP^\infty_{MU}\) carries the universal---i.e., maximally complicated---formal group law.  Our route for proving this passes through the foothills of the theory of ``\(p\){\th} power operations'', which simultaneously encode many possible natural transformations from \(MU\)--cohomology to itself glommed together in a large sum, one term of which is the literal \(p\){\th} power.  Remarkably, the identity operation also appears in this family of operations, and the rest of the operations are in some sense controlled by this naturally occuring formal group law.  A careful analysis of this sum begets the inductive proof in \Cref{QuillenSurjective} that \(\sheaf O_{\moduli{fgl}} \to MU_*\) is surjective.
 
 The execution of this proof requires some understanding of cohomology operations for complex-oriented cohomology theories generally.  Stable such operations correspond to homotopy classes \(MU \to E\), i.e., elements of \(E^0 MU\), which correspond via the Thom isomorphism to elements of \(E^0 BU\).  This object is the repository of \(E\)--characteristic classes for complex vector bundles, which we describe in terms of divisors on formal curves.  This amounts to a description of the formal schemes \(BU(n)_E\), which underpins our understanding of the whole story and which significantly informs our study of connective orientations in \Cref{ChapterSigmaOrientation}.
 
@@ -56,7 +56,7 @@ Y \arrow{r} \arrow[leftarrow, "\simeq"]{d} & X \arrow[leftarrow, "\simeq"]{d} \\
 \end{definition}
 
 \begin{definition}\label{DefnOfCoTangentSpaces}
-Take \(S = \Spec R\) to be our base scheme, let \(X = \Spec A\) be an affine scheme over \(S\), and consider an \(S\)--point \(s\co S \to X\) of \(X\).  The point \(x\) is automatically closed, so that \(s\) is presented as \(\Spec A/I \to \Spec A\) for some ideal \(I\).  The \index{cotangent space}\textit{cotangent space} \(T^*_s X\) is defined by the quotient \(R\)--module \[T^*_s X := I / I^2,\] consisting of functions vanishing at \(s\) as considered up to first order.  Examples of these include the linear parts of curves passing through \(s\), so we additionally define the \index{tangent space}\textit{tangent space} \(T_s X\) by \[T_s X = \CatOf{Schemes}_{\Spec R/}(\Spec R[\eps] / \eps^2, X),\] i.e., maps \(\Spec R[\eps] / \eps^2 \to X\) which restrict to \(s\co S \to X\) upon setting \(\eps = 0\).
+Take \(S = \Spec R\) to be our base scheme, let \(X = \Spec A\) be an affine scheme over \(S\), and consider an \(S\)--point \(s\co S \to X\) of \(X\).  This is automatically a closed subscheme, so that \(s\) is presented as \(\Spec A/I \to \Spec A\) for some ideal \(I\).  The \index{cotangent space}\textit{cotangent space} \(T^*_s X\) is defined by the quotient \(R\)--module \[T^*_s X := I / I^2,\] consisting of functions vanishing at \(s\) as considered up to first order.  Examples of these include the linear parts of curves passing through \(s\), so we additionally define the \index{tangent space}\textit{tangent space} \(T_s X\) by \[T_s X = \CatOf{Schemes}_{\Spec R/}(\Spec R[\eps] / \eps^2, X),\] i.e., maps \(\Spec R[\eps] / \eps^2 \to X\) which restrict to \(s\co S \to X\) upon setting \(\eps = 0\).
 \end{definition}
 
 \begin{remark}
@@ -68,13 +68,19 @@ Harkening back to \Cref{FirstAppearanceOfInternalAut}, the definition of the \(R
 There is an affine scheme \(T_s X\) defined by \[(T_s X)(u\co \Spec T \to S) := \left\{ f \mid f \in T_{u^* x} u^* X \right\}.\]
 \end{lemma}
 \begin{proof}[Proof sketch]
-We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} to the case at hand.\footnote{Strickland also shows that mapping schemes between formal schemes exist considerably more generally~\cite[Theorem 4.69]{StricklandFSFG}.  The source either has to be ``finite'' in some sense, in which case the proof proceeds along the lines presented here, or it has to be \index{scheme!coalgebraic}\textit{coalgebraic}, which is an important technical tool that we discuss much later in \Cref{DefnCoalgebraicFormalScheme}.}  We start by seeking an \(R\)--algebra \(B\) such that \(R\)--algebra maps \(B \to T\) biject with pairs of maps \(u\co R \to T\) and \(T\)--algebra maps \[f\co A \otimes_R T \to R[\eps] / \eps^2 \otimes_R T.\]  Such maps \(f\) biject with \(R\)--algebra maps \[A \to R[\eps] / \eps^2 \otimes_R T.\]  Using the sequence of inclusions
+We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} to the case at hand.\footnote{Strickland also shows that mapping schemes between formal schemes exist considerably more generally~\cite[Theorem 4.69]{StricklandFSFG}.  The source either has to be ``finite'' in some sense, in which case the proof proceeds along the lines presented here, or it has to be \index{scheme!coalgebraic}\textit{coalgebraic}, which is an important technical tool that we discuss much later in \Cref{DefnCoalgebraicFormalScheme}.}  We start by seeking an \(R\)--algebra \(B\) that corepresents the entire \textit{tangent bundle}, \(T_* X\): we ask that \(R\)--algebra maps \(B \to T\) biject with pairs of a map \(u\co R \to T\) and a \(T\)--algebra map
+\begin{align*}
+f\co A \otimes_R T & \to R[\eps] / \eps^2 \otimes_R T.
+\intertext{Such a map \(f\) is equivalent data to an \(R\)--algebra map}
+A & \to R[\eps] / \eps^2 \otimes_R T.
+\end{align*}
+Using the sequence of inclusions
 \begin{align*}
 \CatOf{Algebras}_{R/}(A, R[\eps] / \eps^2 \otimes_R T) & \subseteq \CatOf{Modules}_R(A, R[\eps] / \eps^2 \otimes_R T) \\
 & \cong \CatOf{Modules}_R(A \otimes_R (R[\eps] / \eps^2)^*, T) \\
 & \cong \CatOf{Algebras}_{R/}(\Sym_R(A \otimes_R (R[\eps] / \eps^2)^*), T),
 \end{align*}
-we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[\InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \frac{A\{1, \operatorname{d\mathit{a}} \mid a \in A\}}{\left( \begin{array}{c} \text{\(\operatorname{d\mathit{r}} = 0\) for \(r \in R\)}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right)} .\]  To extract the scheme \(T_s X\) from this, we construct the pullback \[T_s X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting \(\eps = 0\) and on the right using the point \(s\).  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_s X} = A / I^2 \cong R \oplus T^*_s X. \qedhere\]
+we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[T_* X = \InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \frac{A\{1, \operatorname{d\mathit{a}} \mid a \in A\}}{\left( \begin{array}{c} \text{\(\operatorname{d\mathit{r}} = 0\) for \(r \in R\)}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right)} .\]  To extract the scheme \(T_s X\) from this, we construct the pullback \[T_s X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting \(\eps = 0\) and on the right using the point \(s\).  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_s X} = A / I^2 \cong R \oplus T^*_s X. \qedhere\]
 \end{proof}
 
 \begin{definition}
@@ -105,7 +111,7 @@ Picking the affine scheme \(X = \Spec R[x_1, \ldots, x_n] = \mathbb A^n\) and th
 
 Part of the point of the geometric language is to divorce abstract rings (e.g., \(E^0 \CP^\infty\)) from concrete presentations (e.g., \(E^0\ps{x}\)), so we additionally reserve some vocabulary for the property of being isomorphic to \(\A^n\):
 \begin{definition}\label{DefnFormalVariety}
-A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimension \(n\)) is a formal scheme \(V\) which is (noncanonically) isomorphic to \(\A^n\)---or, equivalently, \(\sheaf O_V\) is (noncanonically) isomorphic to a power series ring.  The two maps in an isomorphism pair \[V \xrightarrow{\simeq} \A^n, \quad V \xleftarrow{\simeq} \A^n\] are called a \index{coordinate!system}\textit{coordinate (system)} and a \index{parameter!system}\textit{parameter (system)} respectively.  Finally, an \(S\)--point \(s\co S \to X\) is called \index{formal scheme!smooth}\textit{formally smooth} when \(X^\wedge_s\) gives a formal variety.
+A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimension \(n\), over a base \(R\)) is a formal scheme \(V\) which is (noncanonically) isomorphic to \(\A^n\)---or, equivalently, \(\sheaf O_V\) is (noncanonically) isomorphic to a power series ring.  The two maps in an isomorphism pair \[V \xrightarrow{\simeq} \A^n, \quad V \xleftarrow{\simeq} \A^n\] are called a \index{coordinate!system}\textit{coordinate (system)} and a \index{parameter!system}\textit{parameter (system)} respectively.  Finally, an \(S\)--point \(s\co S \to X\) is called \index{formal scheme!smooth}\textit{formally smooth} when \(X^\wedge_s\) gives a formal variety.
 \end{definition}
 
 This definition allows local theorems from analytic differential geometry to be imported in coordinate-free language.  For instance, there is the following version of the \index{inverse function theorem}inverse function theorem:
@@ -131,7 +137,7 @@ In the motivating case where \(F \cong \A^n\) is given, we can define \(M\) to b
 \end{proof}
 
 \begin{corollary}[{\cite[Th\'eor\`eme III.2.1]{GrothendieckSGAI}}]
-We define a \textit{nilpotent thickening}\textit{nilpotent thickening}\index{scheme!nilpotent thickening} to be a closed inclusion of schemes whose associated ideal sheaf is nilpotent.  An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a free \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
+We define a \textit{nilpotent thickening}\textit{nilpotent thickening}\index{scheme!nilpotent thickening} to be a closed inclusion of schemes whose associated ideal sheaf is nilpotent.  An \(S\)--point \(s\co S \to X\) of a Noetherian scheme is formally smooth exactly when \(T_s X\) is a projective \(R\)--module and for any nilpotent thickenings \(S \to \Spec B \to \Spec B'\) and any solid diagram
 \begin{center}
 \begin{tikzcd}[column sep=3em]
 S \arrow{r} \arrow["s"]{rd} & \Spec B \arrow{r} \arrow{d} & \Spec B' \arrow[densely dotted]{ld} \\
@@ -406,8 +412,7 @@ The first claim is justified by the naturality of \Cref{GeneralThomIsom}, the se
 We use these properties to work the following Example, which connects Thom sheaves with the major players from \Cref{FormalVarietiesLecture}.
 
 \begin{example}[{\cite[Section 8]{AHSHinfty}}]\label{Pi2AndInvariantDiffls}
-Take \(\L\) to be the \index{canonical bundle}canonical line bundle over \(\CP^\infty\).  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T_2(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} \widetilde E^0 T_2(\L)\] of \(\widetilde E^0 T_2(\L)\) with the augmentation ideal in \(E^0 \CP^\infty\).  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of \(\ThomSheaf{\L}\) with the sheaf of functions vanishing at the origin of \(\CP^\infty_E\).  Pulling \(\L\) back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:%
-\footnote{The identification \(0^* \sheaf I(0) = \sheaf I(0) / \sheaf I(0) \cdot \sheaf I(0)\) deserves further explanation.  The functor \(0^*\) is right-exact, so sends the short exact sequence \[0 \to \sheaf I(0)^2 \to \sheaf I(0) \to \sheaf I(0) / \sheaf I(0)^2 \to 0\] to a right-exact sequence, and we need only check that the map \(0^* \sheaf I(0)^2 \to 0^* \sheaf I(0)\) is zero.  This is the statement that a function vanishing to second order also has vanishing first derivative.}
+Take \(\L\) to be the \index{canonical bundle}canonical line bundle over \(\CP^\infty\).  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T_2(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} \widetilde E^0 T_2(\L)\] of \(\widetilde E^0 T_2(\L)\) with the augmentation ideal in \(E^0 \CP^\infty\).  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of \(\ThomSheaf{\L}\) with the sheaf of functions vanishing at the origin of \(\CP^\infty_E\).  Pulling \(\L\) back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:
 \begin{align*}
 \widetilde{\pi_2 E} & \cong \widetilde{E^0 \CP^1} \tag{\(S^2 \simeq \CP^1\)} \\
 & \cong \ThomSheaf{0^* \L} \tag{\Cref{DefnThomSheaf}} \\
@@ -423,7 +428,7 @@ where \(\omega_{\CP^\infty_E}\) denotes the sheaf of \index{Kahler differentials
 Outside of this Example, it is difficult to find line bundles \(\ThomSheaf{V}\) which we can analyze so directly.  In order to get a handle on on \(\ThomSheaf{V}\) in general, we now seek to strengthen this bond between line bundles and vector bundles by finding inside of algebraic topology the alternative presentations of line bundles given in \Cref{CurveDivisorsSection}.  In particular, we would like a topological construction on vector bundles which produces divisors---i.e., finite schemes over \(X_E\).  This has the scent of a certain familiar topological construction called projectivization, and we now work to justify the relationship.
 
 \begin{definition}
-Let \(V\) be a complex vector bundle of rank \(n\) over a base \(X\).  Define \(\P(V)\), the \index{projectivization}\textit{projectivization of \(V\)}, to be the \(\CP^{n-1}\)--bundle over \(X\) whose fiber of \(x \in X\) is the space of complex lines in the original fiber \(V|_x\).
+Let \(V\) be a complex vector bundle of rank \(n\) over a base \(X\).  Define \(\P(V)\), the \index{projectivization}\textit{projectivization of \(V\)}, to be the \(\CP^{n-1}\)--bundle over \(X\) whose fiber over \(x \in X\) is the space of complex lines in the original fiber \(V|_x\).
 \end{definition}
 
 \begin{theorem}\label{CohomologyOfProjectivization}
@@ -464,13 +469,13 @@ The sub-bundle of \(\pi^*(V)\) consisting of vectors \((v, (\ell, x))\) such tha
 \end{corollary}
 
 \begin{corollary}[``Splitting principle'' / ``Complex--oriented descent'']\label{OriginalSplittingPrinciple}\index{splitting principle}
-Associated to any \(n\)--dimensional complex vector bundle \(V\) over a base \(X\), there is a canonical map \(i_V\co Y_V \to X\) such that \((i_V)_E\co (Y_V)_E \to X_E\) is finite and faithfully flat, and there is a canonical splitting into complex line bundles:
+Associated to any \(n\)--dimensional complex vector bundle \(V\) over a base \(X\), there is a canonical map \(f_V\co Y_V \to X\) such that \((f_V)_E\co (Y_V)_E \to X_E\) is finite and faithfully flat, and there is a canonical splitting into complex line bundles:
 \[\pushQED{\qed}
-i_V^*(V) \cong \bigoplus_{i=1}^n \L_i. \qedhere
+f_V^*(V) \cong \bigoplus_{i=1}^n \L_i. \qedhere
 \popQED\]
 \end{corollary}
 
-This last Corollary is extremely important.  Its essential algebraic contents is to say that any question about characteristic classes can be checked for sums of line bundles.  Specifically, because of the injectivity of \(i_V^*\), any relationship among the characteristic classes deduced in \(E^* Y_V\) must already be true in the ring \(E^* X\).  The following theorem is a consequence of this principle:
+This last Corollary is extremely important.  Its essential algebraic content is to say that any question about characteristic classes can be checked for sums of line bundles.  Specifically, because of the injectivity of \(f_V^*\), any relationship among the characteristic classes deduced in \(E^* Y_V\) must already be true in the ring \(E^* X\).  The following theorem is a consequence of this principle:
 
 \begin{theorem}[{\cite[Theorem 16.2 and 16.10]{Switzer}}]\label{ChernClassesAreSymmInChernRoots}
 Again take \(E\) to be complex-oriented.  The coset fibration \[U(n-1) \to U(n) \to S^{2n-1}\] deloops to a spherical fibration \[S^{2n-1} \to BU(n-1) \to BU(n).\]  The associated Serre spectral sequence \[E_2^{*, *} = H^*(BU(n); E^* S^{2n-1}) \Rightarrow E^* BU(n-1)\] degenerates at \(E_{2n}\) and induces an isomorphism \[E^* BU(n) \cong E^* \llbracket \sigma_1, \ldots, \sigma_n\rrbracket.\]  Now, let \(V\co X \to BU(n)\) classify a vector bundle \(V\).  Then the coefficient \(c_j\) in the polynomial \(c(V)\) is selected by \(\sigma_j\): \[c_j(V) = V^*(\sigma_j).\]
@@ -515,7 +520,7 @@ The sum map \[BU(n) \times BU(m) \xrightarrow\oplus BU(n+m)\] induces on Chern p
 The following is a consequence of combining this Lemma with the splitting principle:
 
 \begin{corollary}
-The map \(Y_E \xrightarrow{f_V} X_E\) pulls \(\P(V)_E\) back to give \[Y_E \times_{X_E} \P(V)_E \cong \bigsqcup_{i=1}^n \P(\L_i)_E.\]
+The map \(Y_E \xrightarrow{f_V} X_E\) of \Cref{OriginalSplittingPrinciple} pulls \(\P(V)_E\) back to give \[Y_E \times_{X_E} \P(V)_E \cong \bigsqcup_{i=1}^n \P(\L_i)_E.\]
 \end{corollary}
 \begin{proof}[Interpretation]
 This says that the splitting principle is a topological enhancement of the claim that a divisor on a curve can be base-changed along a finite flat map where it splits as a sum of points.
@@ -553,10 +558,10 @@ BU(n)_E \times BU(m)_E \arrow{r}{\otimes} \arrow[equal]{d} & BU(nm)_E \arrow[equ
 \Div_n^+ \CP^\infty_E \times \Div_m^+ \CP^\infty_E \arrow{r}{\cdot} & \Div_{nm}^+ \CP^\infty_E,
 \end{tikzcd}
 \end{center}
-where the bottom map acts by \[(D_1, D_2 \subseteq \CP^\infty_E \times X_E) \mapsto (D_1 \times D_2 \subseteq \CP^\infty_E \times \CP^\infty_E \xrightarrow{\mu} \CP^\infty_E),\] and \(\mu\) is the map induced by the \index{line bundle!tensor product}tensor product map \(\CP^\infty \times \CP^\infty \to \CP^\infty\).
+where for a test algebra \(f \co \Spec T \to \Spec E_0\) the bottom map acts by \[(D_1, D_2 \subseteq f^* \CP^\infty_E) \mapsto (D_1 \times D_2 \subseteq f^* \CP^\infty_E \times f^* \CP^\infty_E \xrightarrow{\mu} f^* \CP^\infty_E),\] and \(\mu\) is the map induced by the \index{line bundle!tensor product}tensor product map \(\CP^\infty \times \CP^\infty \to \CP^\infty\).
 \end{corollary}
 \begin{proof}
-By the splitting principle, it is enough to check this on sums of line bundles.  A sum of line bundles corresponds to a totally decomposed divisor, so we consider the case of a pair of such divisors \(\bigsqcup_{i=1}^n \{a_i\}\) and \(\bigsqcup_{j=1}^m \{b_j\}\).  Referring to \Cref{DefnFormalGps}, the map acts by \index{divisor!convolution}convolution of divisors: \[\left(\bigsqcup_{i=1}^n \{a_i\} \right) \left( \bigsqcup_{j=1}^m \{b_j\} \right) = \bigsqcup_{i, j} \{\mu_{\CP^\infty_E}(a_i, b_j)\}. \qedhere\]
+By the splitting principle, it is enough to check this on sums of line bundles.  A sum of line bundles corresponds to a totally decomposed divisor, so we consider the case of a pair of such divisors \(\bigsqcup_{i=1}^n \{a_i\}\) and \(\bigsqcup_{j=1}^m \{b_j\}\).  Referring to \Cref{DefnFormalGps}, the map acts by \index{divisor!convolution}convolution of divisors: \[\left(\bigsqcup_{i=1}^n \{a_i\} \right) \left( \bigsqcup_{j=1}^m \{b_j\} \right) = \bigsqcup_{i, j} \{a_i +_{\CP^\infty_E} b_j\}. \qedhere\]
 \end{proof}
 
 \begin{corollary}\label{BdetCorollary}
