apply _E to Bdet

--- a/quillen.tex
+++ b/quillen.tex
@@ -565,7 +565,7 @@ By the splitting principle, it is enough to check this on sums of line bundles. 
 \end{proof}
 
 \begin{corollary}\label{BdetCorollary}
-The determinant map \[BU(n)_E \xrightarrow{B\det} BU(1)_E\] models the summation map \[\Div^+_n \CP^\infty_E \xrightarrow{\sigma} \CP^\infty_E.\]
+The determinant map \[BU(n)_E \xrightarrow{B\det_E} BU(1)_E\] models the summation map \[\Div^+_n \CP^\infty_E \xrightarrow{\sigma} \CP^\infty_E.\]
 \end{corollary}
 \begin{proof}
 This is a direct consequence of the splitting principle, the factorization
