more simple ref fixes

--- a/main.bib
+++ b/main.bib
@@ -484,6 +484,20 @@ MRREVIEWER = {Amnon Neeman},
   note = {\url{http://people.mpim-bonn.mpg.de/tbarthel/CC.pdf}, Accessed: 2016-10-26}
 }
 
+@article{BarthelFrankland,
+author = "Barthel, Tobias and Frankland, Martin",
+doi = "10.2140/agt.2015.15.2065",
+fjournal = "Algebraic & Geometric Topology",
+journal = "Algebr. Geom. Topol.",
+number = "4",
+pages = "2065--2131",
+publisher = "MSP",
+title = "Completed power operations for Morava $E$–theory",
+url = "https://doi.org/10.2140/agt.2015.15.2065",
+volume = "15",
+year = "2015"
+}
+
 @ARTICLE{BSS,
    author = {{Barthel}, T. and {Schlank}, T. and {Stapleton}, N.},
     title = "{Chromatic homotopy theory is asymptotically algebraic}",
