--- a/quillen.tex
+++ b/quillen.tex
@@ -826,7 +826,7 @@ The chain model for \(\HFtwo\)--homology is actually also rigid enough to define
 \end{example}
 
 \begin{remark}[{\cite[Theorems III.4.1-3, Remark III.4.4]{BMMS}}]\label{HinftyRingsModp}
-Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo \(2\), where \((x + y)^2 \equiv x^2 + y^2\), that this operation becomes stable.  In fact, more than this is true: for instance, if an \(H_\infty\)--ring spectrum \(E\) has \(\pi_0 E = \F_p\), it must be the case that \(E\) is an \(\HFp\)--algebra.  This fact also gives an inexplicit means to recover \Cref{MOSplitsIntoHF2s}, after noting that the same methods used to endow \(MU\) with an \(H_\infty\)--ring spectrum structure do the same for \(MO\).
+Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo \(2\), where \((x + y)^2 \equiv x^2 + y^2\), that this operation becomes stable.  In fact, more than this is true: for instance, if an \(H_\infty\)--ring spectrum \(E\) has \(\pi_0 E = \F_p\), it must be the case that \(E\) receives a ring spectrum map from \(\HFp\).  This fact also gives an inexplicit means to recover \Cref{MOSplitsIntoHF2s}, after noting that the same methods used to endow \(MU\) with an \(H_\infty\)--ring spectrum structure do the same for \(MO\).
 \end{remark}
 
 
@@ -1026,7 +1026,7 @@ Recall that \(w\) is a power series in \(t\) with coefficients in \(C\) and lead
 
 Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)_{(p)}\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, we have \(N = 1\); the class \(y\) lies in the critical degree \(-2q\); and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
 
-In the first case, where \(q > 0\), it follows that \(MU^{-2q}(X)_{(p)}\) is contained in \(R^{-2q}_{(p)} + pMU^{-2q}(X)_{(p)}\), and since \(MU^{-2q}(X)_{(p)}\) has finite order torsion\footnote{This is a consequence of \(X\) having finitely many cells, \(MU\) having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that \(MU^{-2q}(X)_{(p)} = R^{-2q}_{(p)}\).  In the other case, \(x\) can be rewritten as a sum of elements in \(R^{0}_{(p)}\), elements in \(p \widetilde{MU}^{0}(X)_{(p)}\), and elements in \((\widetilde{MU}^0(X)_{(p)})^p\).  Since the ideal \(\widetilde{MU}^0(X)_{(p)}\) is nilpotent, it again follows that \(\widetilde{MU}^0(X)_{(p)} = R^0_{(p)}\), concluding the induction.
+In the first case, where \(q > 0\), it follows that \(MU^{-2q}(X)_{(p)}\) is contained in \(R^{-2q}_{(p)} + pMU^{-2q}(X)_{(p)}\), and since \(MU^{-2q}(X)_{(p)}\) is finitely generated\footnote{This is a consequence of \(X\) having finitely many cells, \(MU\) having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that \(MU^{-2q}(X)_{(p)} = R^{-2q}_{(p)}\).  In the other case, \(x\) can be rewritten as a sum of elements in \(R^{0}_{(p)}\), elements in \(p \widetilde{MU}^{0}(X)_{(p)}\), and elements in \((\widetilde{MU}^0(X)_{(p)})^p\).  Since the ideal \(\widetilde{MU}^0(X)_{(p)}\) is nilpotent, it again follows that \(\widetilde{MU}^0(X)_{(p)} = R^0_{(p)}\), concluding the induction.
 \end{proof}
 
 \begin{corollary}[{\cite[Corollary 5.2]{Quillen}}]\label{QuillenSurjective}
