--- a/finite.tex
+++ b/finite.tex
@@ -131,7 +131,7 @@ The basic observation in this case is that \(0 \to R \to S \to S \otimes_R S\) i
 Without the flatness hypothesis, this Theorem fails dramatically and immediately.  For instance, the inclusion of the closed point \[f\co \Spec \F_p \to \Spec \Z\] fails to distinguish the \(\Z\)--modules \(\Z\) and \(\Z/p\).  Remarkably, this can be to large extent repaired by reintroducing homotopy theory and passing to derived categories---for instance, the complexes \(Lf^* \widetilde{\Z}\) and \(Lf^* \widetilde{\Z/p}\) become distinct as objects of \(D(\Spec \F_p)\).  Our preceding discussion of descent in \Cref{StrictCechDescentRemark} can be quickly revised for this new homotopical setting, provided we remember to derive not just the categories of sheaves but also their underlying geometric objects.  Our approach is informed by the following result:
 
 \begin{lemma}[{\cite[Theorem IV.2.4]{EKMM}}]
-There is an equivalence of \(\infty\)--categories between \(D(\Spec R)\) and \(\CatOf{Modules}_{HR}\). \qed
+There is an equivalence of symmetric monoidal \(\infty\)--categories between \(D(\Spec R) \simeq \CatOf{Modules}_{HR}\). \qed
 \end{lemma}
 
 Hence, given a map of rings \(f\co R \to S\), we redefine the derived descent object to be the cosimplicial ring spectrum
@@ -146,7 +146,7 @@ HS \arrow[leftarrow]{r} \arrow[shift left=\baselineskip]{r} \arrow[shift right=\
 and note that an \(R\)--module \(M\) gives rise to a cosimplicial left--\(\mathcal D_{Hf}\)--module which we denote \(\mathcal D_{Hf}(HM)\).  The totalization of this cosimplicial module gives rise to an \(HR\)--module receiving a natural map from \(M\), and we can ask for an analogue of \Cref{OriginalFFDescent}.
 
 \begin{lemma}\label{DescentFromHFpToHZp}
-For \(f\co \Z \to \F_p\) and \(M\) a connective complex of \(\Z\)--modules, the totalization \(\Tot \mathcal D_{Hf}(HM)\) recovers the \(p\)--completion of \(M\).\footnote{There is an important distinction between a \(p\)--complete module and a module over the \(p\)--completion.  For example, \(\Q_p\) has a (continuous!) \(\Z_p\)--module structure, but it is not \(p\)--complete: the identity \(\Q_p \otimes_{\Z_p} \Z_p / p^j = 0\) inhibits its reconstruction from the associated descent data.}
+For \(f\co \Z \to \F_p\) and \(M\) a connective complex of \(\Z\)--modules, the totalization \(\Tot \mathcal D_{Hf}(HM)\) recovers the \(p\)--completion of \(M\).\footnote{There is an important distinction between a \(p\)--complete module and a module over the \(p\)--completion.  For example, \(\Q_p\) has a (continuous!) \(\Z_p\)--module structure, but it is not \(p\)--complete: the identity \(\Q_p \otimes_{\Z_p} \Z_p / p^j = 0\) inhibits its reconstruction from the associated descent data.  This distinction is embedded in the formation of the derived category, but in turn this has its own wrinkles; see, for example, \cite[Appendix A]{HoveyStrickland} and \cite[Appendix A]{BarthelFrankland}.}
 \end{lemma}
 \begin{proof}[Proof sketch]
 The map \(H\Z \to \HFp\) kills the ideal \((p)\), and we calculate \[\HFp \sm_{H\Z} \HFp \simeq \HFp \vee \Susp \HFp\] to be connective.  Together, these facts show that the filtration of \(\mathcal D_{Hf}(HM)\) gives the \(p\)--adic filtration on homotopy.  If \(\pi_* HM\) is already \(p\)--complete, then the reassembly map \(HM \to \Tot \mathcal D_{Hf}(HM)\) is a weak equivalence.
@@ -174,10 +174,10 @@ The \index{completion}\textit{\(E\)--nilpotent completion} of \(X\) is the total
 \end{definition}
 
 \begin{remark}[{\cite[Theorem 1.12]{RavenelLocalizationWRTPeriodic}, \cite{BousfieldLocalization}}]
-Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[b_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial algebra on the class \(b_1\).  Inverting \(b_1\) then gives \((H\Z_* \CP^\infty)[b_1^{-1}] = \Gamma[b_1][b_1^{-1}] = \Q[b_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: all you really need to know is that \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, so that \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) cannot be a rational group since \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(D(KU/p) = F(KU/p, \S) = 0\), since $\S$ is $H\Z$--local.}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps \(f\co R \to S\) of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite[Appendix D]{LurieSAG}.
+Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[b_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial algebra on the class \(b_1\).  Inverting \(b_1\) then gives \((H\Z_* \CP^\infty)[b_1^{-1}] = \Gamma[b_1][b_1^{-1}] = \Q[b_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: all you really need to know is that \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, so that \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) cannot be a rational group since \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(D(KU/p) = F(KU/p, \S) = 0\), since $\S$ is $H\Z$--local.}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite[Appendix D]{LurieSAG}.
 \end{remark}
 
-Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence\footnote{The reader who would like a refresher about the construction of spectral sequences is referred to Boardman's exceptional article~\cite{BoardmanConditionallyConvergent}.} for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
+Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence\footnote{The reader who would like a refresher about the construction of spectral sequences is referred to Boardman's exceptional article~\cite{BoardmanConditionallyConvergent}.} for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams(--Novikov) spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
 
 \begin{definition}[\textbf Commutativity \textbf Hypothesis]
 An even-periodic ring spectrum \(E\) satisfies \index{commutativity hypothesis@commutativity hypothesis, \CH}{\CH} when the ring \(\pi_* E^{\sm j}\) is commutative for all \(j \ge 1\).  In this case, we can form the simplicial scheme \[\context{E} = \Spec \pi_0 \mathcal D_E,\] called the \index{context}\textit{context} of \(E\).
