use robert's guideline for footnote rule length

--- a/preamble.tex
+++ b/preamble.tex
@@ -493,7 +493,7 @@
 % restore the footnote rule
 \makeatletter
 \def\footnoterule{\kern-3\p@
-  \hrule \@width 2in \kern 2.6\p@} % the \hrule is .4pt high
+  \hrule \@width 4nc \kern 2.6\p@} % the \hrule is .4pt high
 \makeatother
 
 
